Change featured projects to my own

--- a/content/projects/language-learning-helper.mdx
+++ b/content/projects/language-learning-helper.mdx
@@ -1,5 +1,5 @@
 ---
-title: language learing helper
+title: Language Learing Helper
 description: I am building a full-stack app to support learning a new language alongside existing language apps like Duolingo.
 date: "2023-11"
 url: https://language-learning-helper-will-helliwell.vercel.app/
